Fixed bug in /blog - POST method, enabled usage of default image if no image is provided